Fixing post-title color inconsistencies in dark mode.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -39,4 +39,10 @@
   .banner-light {
 	  display: none;
   }
+  // Blog post or page title
+	.page-title,
+	.post-title,
+	.post-title a {
+	  color: #CE193C;
+	}
 }
